[gd_scene load_steps=4 format=2]

[ext_resource path="res://SceneChange.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 96, 32 )

[node name="SceneChange" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
currentScene = "None"
newScene = "None"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )

[node name="Nearby" type="Area2D" parent="." index="1"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Nearby" index="0"]

shape = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_SceneChange_body_entered"]

[connection signal="body_exited" from="." to="." method="_on_SceneChange_body_exited"]

[connection signal="body_entered" from="Nearby" to="." method="_on_Nearby_body_entered"]


